# CompArch

./: .gitignore
HW 1/: CMakeLists.txt  complex.cpp  complex.h  container.cpp  container.h  fraction.cpp  fraction.h  main.cpp  number.cpp  number.h  polar.cpp  polar.h  random.cpp  random.h
task 7/: 09-1b.c  09-2a.c  09-2b.c  CMakeLists.txt
task1/: CMakeLists.txt  README.md  run_tests.sh
task1/src/: main.cpp
task1/src/complex/: complex.cpp  complex.h
task1/src/container/: container.cpp  container.h
task1/src/fraction/: fraction.cpp  fraction.h
task1/src/number/: number.cpp  number.h
task1/src/polar/: polar.cpp  polar.h
task1/src/random/: random.h
task1/tests/random_test_1/: output.txt
task1/tests/random_test_10/: output.txt
task1/tests/random_test_100/: output.txt
task1/tests/random_test_1000/: output.txt
task1/tests/random_test_10000/: output.txt
task1/tests/test_all_types_1/: output.txt
task2/: CMakeLists.txt  README.md  run_tests.sh
task2/src/: main.cpp
task2/src/complex/: complex.cpp  complex.h
task2/src/container/: container.cpp  container.h
task2/src/fraction/: fraction.cpp  fraction.h
task2/src/number/: number.h
task2/src/polar/: polar.cpp  polar.h
task2/src/random/: random.cpp  random.h
task2/tests/random_test_1/: output.txt
task2/tests/random_test_10/: output.txt
task2/tests/random_test_100/: output.txt
task2/tests/random_test_1000/: output.txt
task2/tests/random_test_10000/: output.txt
task3/: README.md  complex.py  container.py  fraction.py  main.py  polar.py  run_tests.sh
task3/tests/complex_only/: answer.txt  (+1 more)
task4/: Makefile  README.md  lib.asm  lib.lst  main.c  run_tests.sh
task5/: CMakeLists.txt  README.md
task5/src/: main.cpp
task5/tests/: test.txt
task6/: CMakeLists.txt  main.c
task7/: 09-1a.c
(+23 files in other folders)
